# Dragonic-Vernosa

./: README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/web/: index.html  style.css
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/leonoretech/dragonicvernosa/: LlamaEngine.kt  MainActivity.kt  ModelManager.kt  WebBridge.kt
app/src/main/res/values/: strings.xml  themes.xml
web-src/: app.ts  package.json  tsconfig.json
